# testeranto-example-project

./: .gitignore  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  aider.Dockerfile  build.gradle  build.sh  go.mod  go.sum  init.sh  install-dependencies.sh  install.sh  package-lock.json  package.json  pyvenv.cfg  requirements.txt  setup.py  test.sh  tsconfig.json
pkg/calculator/: calculator.go
src/: __init__.py  main.rs  your_project_name.rb
src/java/: Calculator.java  Main.java  README.md  pom.xml
src/python/: Calculator.pitono.test.py  Calculator.unittest.test.py
src/ruby/: Calculator-test.rb  Calculator.rb  Calculator.rspec.test.rb
src/rust/: .gitignore  Calculator.rs  Calculator.rusto.test.rs  Cargo.toml  README.md  lib.rs
src/rust/testeranto/: Calculator.native.test.rs  Calculator.rusto.adapter.rs  Calculator.rusto.implementation.rs  Calculator.rusto.specification.rs  Calculator.rusto.test.rs
src/rust/tests/: integration_test.rs
src/ts/: Calculator.jest.test.ts  Calculator.test.adapter.ts  Calculator.test.implementation.ts  Calculator.test.node.ts  Calculator.test.specification.ts  Calculator.test.ts  Calculator.test.types.ts  Calculator.test.web.adapter.ts  Calculator.test.web.react.adapter.ts  Calculator.test.web.react.implementation.ts  Calculator.test.web.react.ts  Calculator.test.web.ts  Calculator.ts  CalculatorReact.tsx
testeranto/: docker-compose.yml  documentation.json  extension-config.json  extracted_script.rb  golang_runtime.go  java_runtime.java  native_detection.rb  node_runtime.ts  python_runtime.py  python_runtime.ts  reportsnode_build_errors  ruby_runtime.rb  rust_runtime.rs  rust_runtime.ts  source_analyzer.rb  testeranto.ts  testeranto.yml  web_hoist.ts  web_runtime.ts
testeranto/bundles/golangtests/: inputFiles.json  main  src_golang_cmd_calculator-test_main.go-inputFiles.json
testeranto/bundles/nodetests/: inputFiles.json
testeranto/bundles/pythontests/: Calculator.pitono.test.py  Calculator.pitono.test.py-inputFiles.json  inputFiles.json
testeranto/bundles/rubytests/: inputFiles.json
testeranto/bundles/rusttests/: src_rust_Calculator.rusto.test.rs-inputFiles.json
testeranto/bundles/webtests/: Calculator_test_web.html  inputFiles.json
testeranto/reports/: index.html  index.js  index.tsx
testeranto/reports/golangtests/: tests.json
testeranto/reports/node/: tests.json
testeranto/reports/ruby/: tests.json
testeranto/reports/rubytests/: tests.json
testeranto/runtimes/golang/: golang.Dockerfile  golang.go  native_detection.go
testeranto/runtimes/java/: java.Dockerfile  java.java
testeranto/runtimes/node/: native_detection.js  node.Dockerfile
testeranto/runtimes/python/: native_detection.py  python.Dockerfile  python.py
testeranto/runtimes/ruby/: ruby.Dockerfile  ruby.rb
testeranto/runtimes/rust/: rust.Dockerfile  rust.rs
testeranto/runtimes/web/: web.Dockerfile
testeranto/rust_builder/: Cargo.toml
testeranto/rust_builder/src/: main.rs  native_detection.rs
(+47 files in other folders)
