[package]
name = "calculator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A calculator implementation for testing with Testeranto"
license = "MIT"
repository = ""
readme = "README.md"

# The library crate containing the Calculator implementation
[lib]
name = "calculator"
path = "src/lib.rs"

# Main application binary
[[bin]]
name = "calculator_app"
path = "src/bin/main.rs"

# Testeranto test binaries
[[bin]]
name = "calculator_testeranto_test"
path = "testeranto/Calculator.rusto.test.rs"

# Dependencies for the library
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testeranto-specific dependencies
[dependencies.testeranto_rusto]
path = "testeranto_rusto"
features = []

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.async-trait]
version = "0.1"

# Regular Rust tests (unit and integration)
[dev-dependencies]
